--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 *,
 *:before,
@@ -26,15 +27,16 @@ body {
   font-family: var(--font-family);
   color: var(--white);
 
-  min-height: 100vh;
-
   background-image: var(--bg-shadow), var(--bg-img);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.load-icon {
+span.error,
+.load-icon,
+.iconoir-sun-light,
+.iconoir-half-moon {
   display: none;
 
   &.active {
@@ -42,10 +44,109 @@ body {
   }
 }
 
-span.error {
-  display: none;
+.main-container {
+  width: 80%;
+  margin: 20px auto; /* need to set width for auto to work */
 
-  &.active {
-    display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 80px;
+}
+
+.search-container {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+  .la-circle-notch {
+    font-size: 2rem;
+  }
+
+  & span.error {
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+}
+
+.search-box {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  & input {
+    width: 60%;
+    padding: 0px 10px;
+    border: none;
+    border-bottom: 2px solid white;
+    background-color: var(--bg-shadow);
+
+    color: var(--white);
+    font-size: 1.2rem;
+    outline: none;
+  }
+
+  & button {
+    border: none;
+    border-bottom: 2px solid white;
+    background-color: var(--bg-shadow);
+    cursor: pointer;
+
+    & i {
+      color: var(--white);
+      font-size: 2rem;
+    }
+  }
+}
+
+.weather-info {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.upper-container {
+  display: flex;
+  justify-content: space-between;
+
+  .left-box {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    .temperature {
+      font-size: 4.5rem;
+    }
+  }
+
+  .right-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .condition {
+      font-size: 2rem;
+    }
+    & i {
+      font-size: 3rem;
+    }
+  }
+}
+
+.below-container {
+  display: flex;
+  justify-content: space-between;
+
+  .info-box {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    & i {
+      font-size: 3.5rem;
+    }
   }
 }
