--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,8 +17,8 @@ html {
   /* color */
   --bg-shadow: linear-gradient(
     to right,
-    rgba(0, 0, 0, 0.4),
-    rgba(0, 0, 0, 0.5)
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.6)
   );
   --white: rgb(255, 255, 255);
 }
@@ -97,12 +97,16 @@ span.error,
     & i {
       color: var(--white);
       font-size: 2rem;
+
+      &:hover {
+        color: rgb(255, 167, 51);
+      }
     }
   }
 }
 
 .weather-info {
-  width: 65%;
+  width: 62%;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -113,25 +117,50 @@ span.error,
   justify-content: space-between;
 
   .left-box {
+    width: 60%;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 7%;
+
+    .location {
+      font-size: 1.5rem;
+      margin-bottom: 5px;
+    }
+
+    .day,
+    .time {
+      font-size: 1.2rem;
+      margin-bottom: 5px;
+    }
 
     .temperature {
-      font-size: 4.5rem;
+      font-size: 3.8rem;
     }
   }
 
   .right-box {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 5px;
 
     .condition {
       font-size: 2rem;
+      text-align: center;
     }
-    & i {
-      font-size: 3rem;
+
+    & div {
+      display: flex;
+      justify-content: center;
+      align-items: end;
+      gap: 5px;
+
+      & i {
+        font-size: 3.5rem;
+      }
+
+      & span {
+        font-size: 1.2rem;
+      }
     }
   }
 }
@@ -147,6 +176,11 @@ span.error,
 
     & i {
       font-size: 3.5rem;
+    }
+
+    & h5,
+    p {
+      font-size: 1rem;
     }
   }
 }
